--- a/report.html
+++ b/report.html
@@ -840,6 +840,190 @@
             textarea.style.height = textarea.scrollHeight + 'px';
         });
     </script>
+    <!-- Place this at the end of your <body> in report.html -->
+<script type="module">
+// Firebase imports
+import { initializeApp } from "https://www.gstatic.com/firebasejs/12.0.0/firebase-app.js";
+import { getFirestore, collection, addDoc, serverTimestamp } from "https://www.gstatic.com/firebasejs/12.0.0/firebase-firestore.js";
+import { getAnalytics } from "https://www.gstatic.com/firebasejs/12.0.0/firebase-analytics.js";
+
+// Firebase config
+const firebaseConfig = {
+  apiKey: "AIzaSyAA-WWtvx8IDFWRqMR2D4VRwTUnnaM2ihg",
+  authDomain: "urbancityportal.firebaseapp.com",
+  projectId: "urbancityportal",
+  storageBucket: "urbancityportal.appspot.com", // fixed typo!
+  messagingSenderId: "913345317549",
+  appId: "1:913345317549:web:0b0391c6cbad339799d424",
+  measurementId: "G-5E6NVFM3FY"
+};
+
+// Initialize Firebase
+const app = initializeApp(firebaseConfig);
+const db = getFirestore(app);
+const analytics = getAnalytics(app);
+
+// ----------- Report Form JS (with Firebase) ------------
+
+// Login check (optional, remove if not needed)
+document.addEventListener('DOMContentLoaded', () => {
+  const isLoggedIn = localStorage.getItem('loggedIn') === 'true';
+  if (!isLoggedIn) {
+    window.location.href = 'login.html';
+  }
+});
+
+// File upload preview logic
+const fileInput = document.getElementById('photos');
+const fileUploadLabel = document.getElementById('fileUploadLabel');
+const filePreview = document.getElementById('filePreview');
+let uploadedFiles = [];
+
+// Drag and drop
+fileUploadLabel.addEventListener('dragover', e => {
+  e.preventDefault();
+  fileUploadLabel.classList.add('dragover');
+});
+fileUploadLabel.addEventListener('dragleave', () => {
+  fileUploadLabel.classList.remove('dragover');
+});
+fileUploadLabel.addEventListener('drop', e => {
+  e.preventDefault();
+  fileUploadLabel.classList.remove('dragover');
+  const files = Array.from(e.dataTransfer.files);
+  handleFiles(files);
+});
+fileInput.addEventListener('change', e => {
+  const files = Array.from(e.target.files);
+  handleFiles(files);
+});
+
+function handleFiles(files) {
+  const imageFiles = files.filter(file => file.type.startsWith('image/'));
+  imageFiles.forEach(file => {
+    if (uploadedFiles.length < 5 && file.size <= 5 * 1024 * 1024) {
+      uploadedFiles.push(file);
+      displayFilePreview(file);
+    }
+  });
+}
+function displayFilePreview(file) {
+  const reader = new FileReader();
+  reader.onload = (e) => {
+    const previewItem = document.createElement('div');
+    previewItem.className = 'file-preview-item';
+    previewItem.innerHTML = `
+      <img src="${e.target.result}" alt="Preview">
+      <div class="file-name">${file.name}</div>
+      <button type="button" class="file-remove" onclick="removeFile('${file.name}')">
+        <i class="fas fa-times"></i>
+      </button>
+    `;
+    filePreview.appendChild(previewItem);
+  };
+  reader.readAsDataURL(file);
+}
+window.removeFile = function(fileName) {
+  uploadedFiles = uploadedFiles.filter(file => file.name !== fileName);
+  const previewItems = filePreview.querySelectorAll('.file-preview-item');
+  previewItems.forEach(item => {
+    if (item.querySelector('.file-name').textContent === fileName) {
+      item.remove();
+    }
+  });
+};
+
+// Get current location button
+const getCurrentLocationBtn = document.getElementById('getCurrentLocation');
+const addressInput = document.getElementById('address');
+getCurrentLocationBtn.addEventListener('click', () => {
+  if (navigator.geolocation) {
+    getCurrentLocationBtn.disabled = true;
+    getCurrentLocationBtn.innerHTML = '<i class="fas fa-spinner fa-spin"></i> Getting Location...';
+    navigator.geolocation.getCurrentPosition(
+      position => {
+        const lat = position.coords.latitude;
+        const lng = position.coords.longitude;
+        addressInput.value = `Lat: ${lat.toFixed(6)}, Lng: ${lng.toFixed(6)}`;
+        addressInput.placeholder = 'Location detected successfully';
+        getCurrentLocationBtn.disabled = false;
+        getCurrentLocationBtn.innerHTML = '<i class="fas fa-check"></i> Location Set';
+        setTimeout(() => {
+          getCurrentLocationBtn.innerHTML = '<i class="fas fa-crosshairs"></i> Use Current Location';
+        }, 2000);
+      },
+      error => {
+        alert('Unable to get your location. Please enter the address manually.');
+        getCurrentLocationBtn.disabled = false;
+        getCurrentLocationBtn.innerHTML = '<i class="fas fa-crosshairs"></i> Use Current Location';
+      }
+    );
+  } else {
+    alert('Geolocation is not supported by this browser.');
+  }
+});
+
+// Form submission to Firestore
+const reportForm = document.getElementById('reportForm');
+const submitBtn = document.getElementById('submitBtn');
+const successMessage = document.getElementById('successMessage');
+
+reportForm.addEventListener('submit', async (e) => {
+  e.preventDefault();
+  // Gather form data
+  const formData = new FormData(reportForm);
+  const reportData = {};
+  formData.forEach((value, key) => {
+    reportData[key] = value;
+  });
+  // Add uploaded file names (not the files themselves)
+  reportData.photos = uploadedFiles.map(file => file.name);
+  reportData.createdAt = serverTimestamp();
+
+  submitBtn.disabled = true;
+  submitBtn.innerHTML = '<i class="fas fa-spinner fa-spin"></i> Submitting Report...';
+
+  try {
+    await addDoc(collection(db, "cityReports"), reportData);
+
+    // Success UI
+    successMessage.classList.add('show');
+    reportForm.reset();
+    uploadedFiles = [];
+    filePreview.innerHTML = '';
+    submitBtn.disabled = false;
+    submitBtn.innerHTML = '<i class="fas fa-paper-plane"></i> Submit Report';
+    successMessage.scrollIntoView({ behavior: 'smooth' });
+    setTimeout(() => {
+      successMessage.classList.remove('show');
+    }, 5000);
+
+  } catch (error) {
+    alert('Failed to submit report: ' + error.message);
+    submitBtn.disabled = false;
+    submitBtn.innerHTML = '<i class="fas fa-paper-plane"></i> Submit Report';
+  }
+});
+
+// Form validation
+const requiredFields = reportForm.querySelectorAll('[required]');
+requiredFields.forEach(field => {
+  field.addEventListener('blur', () => {
+    if (!field.value.trim()) {
+      field.style.borderColor = 'var(--danger-red)';
+    } else {
+      field.style.borderColor = 'var(--border-light)';
+    }
+  });
+});
+
+// Auto-resize textarea
+const textarea = document.getElementById('description');
+textarea.addEventListener('input', () => {
+  textarea.style.height = 'auto';
+  textarea.style.height = textarea.scrollHeight + 'px';
+});
+</script>
 </body>
 
 </html>
